@@ -1,6 +1,7 @@
 10.2.01.alpha.1 - 7th November 2023
 - Code updates.
 - For 'Enhance tooltip' ('Interface'), the scale slider now applies to the character customisation screen (barbershop, dragonriding customisation, etc).
+- For 'Mute game sounds' ('System'), 'Dragonriding') now includes Algarian Stormrider, Anu'relos and Grotto Netherwing Drake.
 
 10.2.00 - 7th November 2023
 - Preliminary update for game patch 10.2.0.
